--- a/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
+++ b/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,25 +44,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/peshkichev/miniconda3/envs/myenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2025-04-29 15:03:03,059 - datasets - INFO - PyTorch version 2.2.2+cpu available.\n"
+     ]
+    }
+   ],
    "source": [
     "from dialogue2graph.datasets.complex_dialogues.generation import LoopedGraphGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/peshkichev/miniconda3/envs/myenv/lib/python3.11/site-packages/pydantic/_internal/_fields.py:198: UserWarning: Field name \"validate\" in \"Dialogue\" shadows an attribute in parent \"BaseModel\"\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from dialogue2graph.pipelines.model_storage import ModelStorage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +90,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,13 +98,6 @@
    "source": [
     "dotenv.load_dotenv()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -125,11 +137,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms = ModelStorage()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ms = ModelStorage()\n",
     "ms.add(\n",
     "    key=\"grouping_llm\",\n",
     "    config={\"model_name\": \"chatgpt-4o-latest\", \"temperature\": 0},\n",
@@ -191,9 +211,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-29 15:12:03,598 - dialogue2graph.pipelines.model_storage - WARNING - Key 'looped_graph_generation_llm:v1' already exists in storage with same config. Skipping.\n",
+      "2025-04-29 15:12:03,599 - dialogue2graph.pipelines.model_storage - WARNING - Key 'looped_graph_validation_llm:v1' already exists in storage with same config. Skipping.\n",
+      "2025-04-29 15:12:03,600 - dialogue2graph.pipelines.model_storage - WARNING - Key 'looped_graph_theme_validation_llm:v1' already exists in storage with same config. Skipping.\n"
+     ]
+    }
+   ],
+   "source": [
+    "topic_generator = LoopedGraphGenerator(ms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-29 15:12:05,684 - dialogue2graph.datasets.complex_dialogues.generation - INFO - \n",
+      "==================================================\n",
+      "2025-04-29 15:12:05,684 - dialogue2graph.datasets.complex_dialogues.generation - INFO - Generating graph for topic: booking a table\n",
+      "2025-04-29 15:12:05,685 - dialogue2graph.datasets.complex_dialogues.generation - INFO - ==================================================\n",
+      "2025-04-29 15:12:05,685 - dialogue2graph.datasets.complex_dialogues.generation - INFO - Generating Graph ...\n",
+      "2025-04-29 15:12:05,686 - dialogue2graph.utils.prompt_caching - INFO - Generated UUID: 00000000-0000-0000-0000-00000000002a\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-29 15:12:13,874 - httpx - INFO - HTTP Request: POST http://193.187.173.33:8002/api/providers/openai/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-04-29 15:12:13,876 - dialogue2graph.datasets.complex_dialogues.generation - INFO - Graph generated is {'edges': [{'source': 1, 'target': 2, 'utterances': [\"I'm looking to book a table at a restaurant.\"]}, {'source': 2, 'target': 3, 'utterances': ['In the city center, please.']}, {'source': 3, 'target': 4, 'utterances': ['Just me and my partner.']}, {'source': 4, 'target': 5, 'utterances': ['For this Saturday.']}, {'source': 5, 'target': 6, 'utterances': ['Around 7:00 pm.']}, {'source': 6, 'target': 7, 'utterances': ['Thank you!']}, {'source': 6, 'target': 8, 'utterances': ['Yes, could you recommend any good dessert options?']}], 'nodes': [{'id': 1, 'label': 'start', 'is_start': True, 'utterances': ['Hello! Welcome to our restaurant booking service. How can I assist you today?']}, {'id': 2, 'label': 'ask_location_preference', 'is_start': False, 'utterances': ['Are you looking to book a table in the city center or a specific neighborhood?']}, {'id': 3, 'label': 'ask_number_of_guests', 'is_start': False, 'utterances': ['How many people will be joining you for the reservation?']}, {'id': 4, 'label': 'ask_date_preference', 'is_start': False, 'utterances': ['What date would you like to make the reservation for?']}, {'id': 5, 'label': 'ask_time_preference', 'is_start': False, 'utterances': ['At what time would you prefer to book the table?']}, {'id': 6, 'label': 'confirm_reservation_details', 'is_start': False, 'utterances': ['Great! I have all the details. Let me confirm your reservation for you.']}, {'id': 7, 'label': 'reservation_confirmation', 'is_start': False, 'utterances': ['Your table is successfully booked. Enjoy your meal!']}, {'id': 8, 'label': 'additional_assistance', 'is_start': False, 'utterances': ['Is there anything else I can help you with regarding your reservation?']}]}\n",
+      "2025-04-29 15:12:13,876 - dialogue2graph.datasets.complex_dialogues.generation - INFO - 🔍 Checking graph requirements...\n",
+      "2025-04-29 15:12:13,877 - dialogue2graph.datasets.complex_dialogues.generation - INFO - 🔄 Found 0 cycles in the graph:\n",
+      "2025-04-29 15:12:13,877 - dialogue2graph.datasets.complex_dialogues.generation - INFO - ❌ Graph doesn't meet cycle requirements (minimum 2 cycles needed)\n",
+      "2025-04-29 15:12:13,878 - dialogue2graph.datasets.complex_dialogues.generation - INFO - ❌ Failed to generate graph for booking a table\n",
+      "2025-04-29 15:12:13,878 - dialogue2graph.datasets.complex_dialogues.generation - ERROR - Error type: ErrorType.TOO_MANY_CYCLES\n",
+      "2025-04-29 15:12:13,878 - dialogue2graph.datasets.complex_dialogues.generation - ERROR - Error message: Graph requires minimum 2 cycles, found 0\n"
+     ]
+    }
+   ],
    "source": [
     "graph = topic_generator.invoke(\"booking a table\")"
    ]
@@ -860,7 +926,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
