--- a/experiments/exp2025_03_10_push_dataset_to_hub/exp2025_03_10_push_dataset_to_hub/push_to_hub.ipynb
+++ b/experiments/exp2025_03_10_push_dataset_to_hub/exp2025_03_10_push_dataset_to_hub/push_to_hub.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "import dotenv\n",
+    "\n",
     "dotenv.load_dotenv()"
    ]
   },
@@ -221,7 +222,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = load_dataset(\"DeepPavlov/d2g_generated_augmented\", token=os.getenv(\"HUGGINGFACE_TOKEN\"))\n",
+    "dataset = load_dataset(\n",
+    "    \"DeepPavlov/d2g_generated_augmented\", token=os.getenv(\"HUGGINGFACE_TOKEN\")\n",
+    ")\n",
     "dataset"
    ]
   },
@@ -259,7 +262,9 @@
    "outputs": [],
    "source": [
     "new_dataset.push_to_hub(\n",
-    "    \"DeepPavlov/d2g_generated_augmented\", private=True, token=os.getenv(\"HUGGINGFACE_TOKEN\")\n",
+    "    \"DeepPavlov/d2g_generated_augmented\",\n",
+    "    private=True,\n",
+    "    token=os.getenv(\"HUGGINGFACE_TOKEN\"),\n",
     ")"
    ]
   }
