Feat/pr metrics (#54)
* added check_metrics workflow

* added metainfo to the Graph class

---------

Co-authored-by: Yuriy Peshkichev <peshkichev@gpu6.ipavlov.mipt.ru>
Co-authored-by: NotBioWaste905 <59259188+NotBioWaste905@users.noreply.github.com>
Co-authored-by: NotBioWaste905 <andruhabobr@gmail.com>

--- a/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
+++ b/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,13 +79,6 @@
    "source": [
     "dotenv.load_dotenv()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -125,68 +118,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ms = ModelStorage()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ms = ModelStorage()\n",
-    "ms.add(\n",
-    "    key=\"grouping_llm\",\n",
-    "    config={\"model_name\": \"chatgpt-4o-latest\", \"temperature\": 0},\n",
-    "    model_type=\"llm\",\n",
-    ")\n",
-    "ms.add(\n",
-    "    key=\"extending_llm\",\n",
-    "    config={\"model_name\": \"chatgpt-4o-latest\", \"temperature\": 0},\n",
-    "    model_type=\"llm\",\n",
-    ")\n",
-    "ms.add(\n",
-    "    key=\"filling_llm\",\n",
-    "    config={\"model_name\": \"o3-mini\", \"temperature\": 1},\n",
-    "    model_type=\"llm\",\n",
-    ")\n",
-    "ms.add(\n",
-    "    key=\"formatting_llm\",\n",
-    "    config={\"model_name\": \"gpt-4o-mini\", \"temperature\": 0},\n",
-    "    model_type=\"llm\",\n",
-    ")\n",
-    "ms.add(\n",
-    "    key=\"sim_model\",\n",
-    "    config={\"model_name\": \"BAAI/bge-m3\", \"device\": \"cuda:0\"},\n",
-    "    model_type=\"emb\",\n",
-    ")"
+    "ms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:dialogue2graph.pipelines.model_storage:Added llm model 'val_llm' to storage\n"
-     ]
-    }
-   ],
-   "source": [
-    "ms.add(\n",
-    "    key=\"val_llm\",\n",
-    "    config={\"model_name\": \"gpt-3.5-turbo\"},\n",
-    "    model_type=\"llm\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic_generator = LoopedGraphGenerator(\n",
-    "    ms, \"grouping_llm\", \"val_llm\", \"grouping_llm\", \"formatting_llm\"\n",
-    ")"
+    "topic_generator = LoopedGraphGenerator(ms)"
    ]
   },
   {
@@ -196,6 +150,15 @@
    "outputs": [],
    "source": [
     "graph = topic_generator.invoke(\"booking a table\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph"
    ]
   },
   {
@@ -455,17 +418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph has all the dialogues\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dias = sampler.invoke(graph_c, 5)"
    ]
@@ -860,7 +815,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
