--- a/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
+++ b/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
@@ -6,23 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "import dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain_huggingface import HuggingFaceEmbeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +44,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,40 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ms.add(\n",
-    "    key=\"grouping_llm\",\n",
-    "    config={\"model_name\": \"chatgpt-4o-latest\", \"temperature\": 0},\n",
-    "    model_type=ChatOpenAI,\n",
-    ")\n",
-    "ms.add(\n",
-    "    key=\"extending_llm\",\n",
-    "    config={\"model_name\": \"chatgpt-4o-latest\", \"temperature\": 0},\n",
-    "    model_type=ChatOpenAI,\n",
-    ")\n",
-    "ms.add(\n",
-    "    key=\"filling_llm\",\n",
-    "    config={\"model_name\": \"o3-mini\", \"temperature\": 1},\n",
-    "    model_type=ChatOpenAI,\n",
-    ")\n",
-    "ms.add(\n",
-    "    key=\"formatting_llm\",\n",
-    "    config={\"model_name\": \"gpt-4o-mini\", \"temperature\": 0},\n",
-    "    model_type=ChatOpenAI,\n",
-    ")\n",
-    "ms.add(\n",
-    "    key=\"sim_model\",\n",
-    "    config={\"model_name\": \"BAAI/bge-m3\", \"model_kwargs\": {\"device\": \"cuda:0\"}},\n",
-    "    model_type=HuggingFaceEmbeddings,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +82,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-30 08:51:25,656 - dialogue2graph.pipelines.model_storage - INFO - Successfully loaded 0 models from model_storage.yml\n"
+     ]
+    }
+   ],
    "source": [
     "ms.load(\"model_storage.yml\")"
    ]
@@ -177,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,11 +159,6 @@
     "pipeline = D2GLightPipeline(\n",
     "    name=\"d2g_light\",\n",
     "    model_storage=ms,\n",
-    "    filling_llm=\"filling_llm\",\n",
-    "    formatting_llm=\"formatting_llm\",\n",
-    "    sim_model=\"sim_model\",\n",
-    "    step2_evals=metrics.DGEvalBase,\n",
-    "    end_evals=metrics.DGEvalBase,\n",
     ")"
    ]
   },
@@ -218,7 +186,7 @@
     "    {\"text\": \"You're welcome! Have a fantastic trip!\", \"participant\": \"assistant\"},\n",
     "]\n",
     "raw_data = PipelineRawDataType(dialogs=data)\n",
-    "graph, report = pipeline.invoke(raw_data)\n",
+    "graph, report = pipeline.invoke(ms, \"d2g_light_sim_model:v1\", raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -413,7 +381,7 @@
     "    data = json.load(f)\n",
     "\n",
     "raw_data = PipelineRawDataType(dialogs=data[\"dialogs\"], true_graph=data[\"true_graph\"])\n",
-    "graph, report = pipeline.invoke(raw_data)\n",
+    "graph, report = pipeline.invoke(ms, \"sim_model\", raw_data)\n",
     "graph.visualise_short(\"transfer\")"
    ]
   },
@@ -489,6 +457,238 @@
     "raw_data = PipelineRawDataType(dialogs=data[\"dialogs\"], true_graph=data[\"true_graph\"])\n",
     "graph, report = pipeline.invoke(raw_data, enable_evals=True)\n",
     "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"test_metrics_data.json\", encoding=\"utf-8\") as f:\n",
+    "    data_2 = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dialogue2graph.metrics.llm_metrics import compare_graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Graph(data_2[0][\"graph\"]).visualise_short(\"true_graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'value': False, 'description': 'Numbers of nodes do not match: 8 != 7'}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compare_graphs(Graph(data_2[1][\"graph\"]), graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.visualise_short(\"result\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"test_pipelines_data.json\", encoding=\"utf-8\") as f:\n",
+    "    data_2 = json.load(f)\n",
+    "raw_data = PipelineRawDataType(\n",
+    "    dialogs=data_2[2][\"dialogues\"], true_graph=data_2[1][\"graph\"]\n",
+    ")\n",
+    "graph, report = pipeline.invoke(\n",
+    "    ms, \"d2g_light_sim_model:v1\", raw_data, enable_evals=True\n",
+    ")\n",
+    "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = load_dataset(\n",
+    "    \"DeepPavlov/d2g_generated_augmented\", token=os.getenv(\"HUGGINGFACE_TOKEN\")\n",
+    ")\n",
+    "data = dataset[\"train\"][0]\n",
+    "data[\"dialogues\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
+    "list_of_files = Path(\n",
+    "    \"/data/home/peshkichev/projects/chatsky-llm-autoconfig/tests/metrics\"\n",
+    ").glob(\"d2g_light*.json\")  # * means all if need specific format then *.csv\n",
+    "latest_file = max(list_of_files, key=lambda x: x.stat().st_ctime)\n",
+    "# latest_file = max(list_of_files, key=os.path.getctime)\n",
+    "print(latest_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = PipelineRawDataType(\n",
+    "    dialogs=data[\"augmented_dialogues\"][0], true_graph=data[\"graph\"]\n",
+    ")\n",
+    "graph, report = pipeline.invoke(\n",
+    "    ms, \"d2g_light_sim_model:v1\", raw_data, enable_evals=True\n",
+    ")\n",
+    "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_graphs(Graph(data[\"graph\"]), graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"graph\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = load_dataset(\"DeepPavlov/d2g_generated\", token=os.getenv(\"HUGGINGFACE_TOKEN\"))\n",
+    "data = dataset[\"train\"][0]\n",
+    "data[\"dialogues\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = dataset[\"train\"][0]\n",
+    "dialogs = data[\"dialogues\"][0][\"messages\"]\n",
+    "graph = data[\"graph\"]\n",
+    "raw_data = PipelineRawDataType(dialogs=dialogs, true_graph=graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"graph\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dialogs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Graph(graph).visualise_short(\"true_graph\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report.properties[\"complex_graph_comparison\"][\"matched_triplets\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(report.properties[\"complex_graph_comparison\"][\"matched_triplets\"])"
    ]
   },
   {
@@ -903,11 +1103,51 @@
     "graph, report = pipeline.invoke(raw_data, enable_evals=True)\n",
     "report"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = load_dataset(\n",
+    "    \"DeepPavlov/d2g_generated_augmented\", token=os.getenv(\"HUGGINGFACE_TOKEN\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "376"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset[\"train\"])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
