remove dialogue2graph folder

--- a/experiments/exp2025_03_10_push_dataset_to_hub/exp2025_03_10_push_dataset_to_hub/push_to_hub.ipynb
+++ b/experiments/exp2025_03_10_push_dataset_to_hub/exp2025_03_10_push_dataset_to_hub/push_to_hub.ipynb
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_dataset = dataset.rename_column(\"dialogues\", \"dialogs\")"
+    "new_dataset = dataset.rename_column(\"dialogs\", \"dialogs\")"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_dataset = dataset.rename_column(\"dialogues\", \"dialogs\")"
+    "new_dataset = dataset.rename_column(\"dialogs\", \"dialogs\")"
    ]
   },
   {
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_dataset = new_dataset.rename_column(\"augmented_dialogues\", \"augmented_dialogs\")"
+    "new_dataset = new_dataset.rename_column(\"augmented_dialogs\", \"augmented_dialogs\")"
    ]
   },
   {
