--- a/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
+++ b/experiments/exp2025_03_20_d2g_pipeline/exp2025_03_20_d2g_pipeline/test_pipeline.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dialogue2graph.datasets.complex_dialogues import generation"
+    "from dialog2graph.datasets.complex_dialogs import generation"
    ]
   },
   {
@@ -96,7 +96,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-30 08:51:25,656 - dialogue2graph.pipelines.model_storage - INFO - Successfully loaded 0 models from model_storage.yml\n"
+      "2025-04-30 08:51:25,656 - dialog2graph.pipelines.model_storage - INFO - Successfully loaded 0 models from model_storage.yml\n"
      ]
     }
    ],
@@ -475,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dialogue2graph.metrics.llm_metrics import compare_graphs"
+    "from dialog2graph.metrics.llm_metrics import compare_graphs"
    ]
   },
   {
@@ -525,7 +525,7 @@
     "with open(\"test_pipelines_data.json\", encoding=\"utf-8\") as f:\n",
     "    data_2 = json.load(f)\n",
     "raw_data = PipelineRawDataType(\n",
-    "    dialogs=data_2[2][\"dialogues\"], true_graph=data_2[1][\"graph\"]\n",
+    "    dialogs=data_2[2][\"dialogs\"], true_graph=data_2[1][\"graph\"]\n",
     ")\n",
     "graph, report = pipeline.invoke(\n",
     "    ms, \"d2g_light_sim_model:v1\", raw_data, enable_evals=True\n",
@@ -552,7 +552,7 @@
     "    \"DeepPavlov/d2g_generated_augmented\", token=os.getenv(\"HUGGINGFACE_TOKEN\")\n",
     ")\n",
     "data = dataset[\"train\"][0]\n",
-    "data[\"dialogues\"][0]"
+    "data[\"dialogs\"][0]"
    ]
   },
   {
@@ -579,7 +579,7 @@
    "outputs": [],
    "source": [
     "raw_data = PipelineRawDataType(\n",
-    "    dialogs=data[\"augmented_dialogues\"][0], true_graph=data[\"graph\"]\n",
+    "    dialogs=data[\"augmented_dialogs\"][0], true_graph=data[\"graph\"]\n",
     ")\n",
     "graph, report = pipeline.invoke(\n",
     "    ms, \"d2g_light_sim_model:v1\", raw_data, enable_evals=True\n",
@@ -613,7 +613,7 @@
    "source": [
     "dataset = load_dataset(\"DeepPavlov/d2g_generated\", token=os.getenv(\"HUGGINGFACE_TOKEN\"))\n",
     "data = dataset[\"train\"][0]\n",
-    "data[\"dialogues\"][0]"
+    "data[\"dialogs\"][0]"
    ]
   },
   {
@@ -623,7 +623,7 @@
    "outputs": [],
    "source": [
     "data = dataset[\"train\"][0]\n",
-    "dialogs = data[\"dialogues\"][0][\"messages\"]\n",
+    "dialogs = data[\"dialogs\"][0][\"messages\"]\n",
     "graph = data[\"graph\"]\n",
     "raw_data = PipelineRawDataType(dialogs=dialogs, true_graph=graph)"
    ]
