--- a/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
+++ b/experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/topic_generation.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dialogue2graph.pipelines.model_storage import ModelStorage"
+    "from dialog2graph.pipelines.model_storage import ModelStorage"
    ]
   },
   {
