--- a/experiments/exp2025_03_27_create_graphs_by_keys/Research_notebook.ipynb
+++ b/experiments/exp2025_03_27_create_graphs_by_keys/Research_notebook.ipynb
@@ -132,7 +132,7 @@
       "cell_type": "code",
       "source": [
         "#select original dialog graphs: \"all\" or list if ids\n",
-        "test_graphs = pipe.add_graphs_to_test(\"all\", source_file)"
+        "test_graphs = pipe.add_graphs_to_test(\"all\", src_graphs)"
       ],
       "metadata": {
         "id": "ug1TFTOa8vSy"
