fix: delete semicolons

--- a/experiments/exp2025_04_07_testing_graph_coverage/exp2025_04_07_testing_graph_coverage/testing_graph_coverage.ipynb
+++ b/experiments/exp2025_04_07_testing_graph_coverage/exp2025_04_07_testing_graph_coverage/testing_graph_coverage.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "039a1c3b",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,8 @@
     "        edge['id'] = edge_id\n",
     "\n",
     "    paths = {}\n",
-    "    paths['nodes'] = []; paths['edges'] = []\n",
+    "    paths['nodes'] = []\n",
+    "    paths['edges'] = []\n",
     "\n",
     "    for turn in start_dialogue['messages']:\n",
     "        if turn['participant'] == 'assistant':\n",
