--- a/experiments/exp2025_05_05_graph_coverage_class/exp2025_05_05_graph_coverage_class/making_class_for_graph_coverage.ipynb
+++ b/experiments/exp2025_05_05_graph_coverage_class/exp2025_05_05_graph_coverage_class/making_class_for_graph_coverage.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ab3ff47e",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,8 @@
     "    all_paths = []\n",
     "    for i, aug_dia in enumerate(augmented_dialogs):\n",
     "        path = {}\n",
-    "        path['nodes'] = []; path['edges'] = []\n",
+    "        path['nodes'] = []\n",
+    "        path['edges'] = []\n",
     "\n",
     "        for turn in aug_dia.messages:\n",
     "            if turn.participant == 'assistant':\n",
